setdeployment.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "15"
  creationTimestamp: "2021-01-14T04:41:44Z"
  generation: 15
  labels:
    app: backend-nubemotic
  name: backend-nubemotic
  namespace: gitlab-managed-apps
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend-nubemotic
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend-nubemotic
    spec:
      containers:
      - image: registry.gitlab.com/argenzealand/backend:c49a170a0b36eb1e22466fe220ae1caf45499fbd
        imagePullPolicy: Always
        name: backend
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-01-14T06:21:27Z"
    lastUpdateTime: "2021-01-14T06:21:27Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-01-14T05:45:29Z"
    lastUpdateTime: "2021-01-14T22:40:36Z"
    message: ReplicaSet "backend-nubemotic-569ff47849" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 15
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
