setservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-nubemotic
  name: backend-nubemotic
  namespace: gitlab-managed-apps
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31058
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: backend-nubemotic
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
